Add Erlang logo.

--- a/erlang_cheatsheet.html
+++ b/erlang_cheatsheet.html
@@ -24,6 +24,7 @@
 
         <!-- Add your site or application content here -->
 		<h1>Erlang Cheatsheet</h1>
+        <img src="img/erlang-logo.svg" alt="Erlang e logo"/>
 		<div id="trapping-exits">
 			<h2>Trapping Exits</h2>
 			<p>Trapping exits means the exit signals are converted to messages before being sent to the process. Trapping exits is done on a per process basis. Execute <code>process_flag(trap_exit, true).</code> in the process you want to be trapping exits.</p>
@@ -63,5 +64,6 @@
             <h2>Raising and Handling Exceptions</h2>
 Purpose                 Expression to generate   try catch handling pattern    trap_exit message
         </div>
+        <div>Created by <a href="https://stratus3d.com">Stratus3D</a></div>
     </body>
 </html>
