Fix a few formatting issues in the cheatsheet.

--- a/erlang_cheatsheet.html
+++ b/erlang_cheatsheet.html
@@ -137,7 +137,7 @@
                     </tbody>
                 </table>
             </div>
-            <div id="footer"><span class="credit">Created by <a href="https://stratus3d.com">Stratus3D</a></span></div>
+            <div id="footer"><span class="credit">Created by <a href="https://stratus3d.com">Stratus3D</a>&nbsp;&nbsp;Copyright 2018.&nbsp;&nbsp;<a href="https://github.com/Stratus3D/erlang-cheatsheet">Source Code</a></span></div>
         </div>
     </body>
 </html>
