Misc. fixes to cheatsheet styling

--- a/template.html
+++ b/template.html
@@ -22,6 +22,7 @@
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
         <![endif]-->
         <div class="wrapper">
+          <h1>$CHEATSHEET_TITLE</h1>
           $CHEATSHEET_HTML
         </div>
     </body>
